--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" href="/src/img/Hekimler/LOGO.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta name="outhor" content="Tofiq Rehimov Alakber Nakhiyev" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="/src/img/Hekimler/LOGO.png" />
   <!-- Font Awesome -->
