--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/src/img/Hekimler/LOGO.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="outhor" content="Tofiq Rehimov Alakber Nakhiyev" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="/src/img/Hekimler/LOGO.png" />
+
+  <!-- <link rel="apple-touch-icon" href="/src/img/Hekimler/LOGO.png" /> -->
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <!-- Google Fonts -->
@@ -22,7 +22,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
+  <link rel="shortcut icon" href="../src/img/Hekimler/LOGO.png" type="image/x-icon" />
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -38,6 +38,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
